# riscv-system-emulator

./: Makefile
hardware/: Cargo.toml
hardware/configs/: baseline.toml  default.toml  high_perf.toml  linux.toml  medium.toml
hardware/src/: config.rs  lib.rs  main.rs  stats.rs
hardware/src/common/: addr.rs  constants.rs  data.rs  error.rs  mod.rs  reg.rs
hardware/src/core/: control.rs  cpu.rs  pipeline.rs
hardware/src/core/arch/: csr.rs  fpr.rs  gpr.rs  mod.rs  mode.rs  trap.rs
hardware/src/core/cpu/: csr.rs  execution.rs  memory.rs  mod.rs  trap.rs
hardware/src/core/pipeline/: hazards.rs  latches.rs  mod.rs  signals.rs  traits.rs
hardware/src/core/pipeline/stages/: decode.rs  execute.rs  fetch.rs  memory.rs  mod.rs  writeback.rs
hardware/src/core/stages/: decode.rs  execute.rs  fetch.rs  memory_access.rs  write_back.rs
hardware/src/core/units/: alu.rs  fpu.rs  lsu.rs
hardware/src/core/units/bru/: gshare.rs  perceptron.rs  static_bp.rs  tage.rs  (+1 more)
hardware/src/isa/: mod.rs
hardware/src/isa/rvc/: expand.rs
hardware/src/sim/: loader.rs
hardware/src/soc/: builder.rs  interconnect.rs  traits.rs
hardware/src/soc/devices/: clint.rs  plic.rs  syscon.rs  uart.rs
hardware/src/soc/memory/: buffer.rs  controller.rs  mod.rs
hardware/src/system/: mod.rs
hardware/src/system/devices/: mod.rs  syscon.rs
hardware/tests/: README.md  alu_tests.rs  arch_tests.rs  branch_predictor_tests.rs  cache_tests.rs  common_tests.rs  csr_tests.rs  forwarding_tests.rs  fpu_tests.rs  integration_tests.rs  isa_tests.rs  lsu_tests.rs  mmu_test.rs  mod.rs  stress_tests.rs
(+18 files in other folders)
